<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/adminDashboardFragment"
        android:icon="@drawable/ic_home"
        android:title="@string/dashboard" />
    <item
        android:id="@+id/userManagementFragment"
        android:icon="@drawable/ic_people"
        android:title="@string/users" />
    <item
        android:id="@+id/adminClassesFragment"
        android:icon="@drawable/ic_classes"
        android:title="@string/classes" />
    <item
        android:id="@+id/notificationsFragment"
        android:icon="@drawable/ic_notifications"
        android:title="@string/notifications" />
    <item
        android:id="@+id/profileFragment"
        android:icon="@drawable/ic_profile"
        android:title="@string/profile" />
</menu>
